# scorep_plugin_x86_adapt

./: .gitmodules  CMakeLists.txt  Readme.md
include/: x86_adapt_plugin.hpp
include/x86_adapt_cxx/: device.hpp  x86_adapt.hpp
src/: main.cpp
